# caught_stealing

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPERS_PLAYBOOK.md  Dockerfile  LICENSE  README.md  SETUP.md  fly.toml  pyproject.toml
app/: cache.py  config.py  database.py  league_config.py  main.py
app/etl/: extractors.py  loaders.py  pipeline.py  transformers.py
app/models/: __init__.py  batting_stats.py  conversation.py  league_team.py  league_week_snapshot.py  pitching_stats.py  player.py  player_points.py  player_splits.py  projection.py  roster.py  statcast_summary.py  stats.py  sync_log.py  trade_value.py  weekly_matchup.py
docs/: AI_FEATURES.md  AI_NEWSLETTER_PIPELINE.md  AI_SHOWCASE.md  APP_MANUAL.md  ARCHITECTURE.md  BACKTESTING_METHODOLOGY.md  CARDINALS_DAILY_REPORT.md  INTEL_PIPELINE.md  USER_GUIDE.md  cardinals-blot-archives.html  cardinals-blot-entries.html  cardinals-blot-head.html  cardinals-blot-header.html  cardinals-blot.css  cardinals-digest-process-doc.md  fantasy-baseball-system-process-doc.md  mlb-roundup-process-doc.md  research_analysis_fantasy_baseball_web_app
launchers/: Fantasy Baseball App.command
scripts/: backtest_harness.py  blog_ingest.py  capture_yahoo_token.py  cardinals_daily_report.py  daily_analysis.py  daily_content_ingest.sh  data_pipeline.py  factcheck_cardinals.py  factcheck_mlb_roundup.py  mlb_daily_roundup.py  optimize_parameters.py  podcast_transcriber.py  republish_to_blot.sh  transcript_collector.py  verify_daily_ingest.sh
tests/: conftest.py  test_api.py  test_assistant.py  test_comparison_api.py  test_optimizer.py  test_projections.py  test_scoring.py  test_trade_values.py  test_waiver_scorer.py
(+103 files in other folders)
