[project]
name = "fantasy-baseball"
version = "0.1.0"
description = "Personal fantasy baseball analysis web app"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "yfpy",
    "pybaseball",
    "MLB-StatsAPI",
    "pulp",
    "apscheduler",
    "diskcache",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "pandas",
    "numpy",
    "python-multipart>=0.0.22",
    "anthropic>=0.86.0",
    "feedparser>=6.0.12",
    "watchdog>=6.0.0",
    "tzdata>=2025.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff",
    "scipy>=1.17.1",
]
